# drpizza

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  Makefile  README.md  build.rs  install.sh  menu.json
.github/workflows/: ci.yml  release.yml
src/: addresses.rs  api.rs  cli.rs  config.rs  data.rs  main.rs  menu.rs  models.rs  order.rs  orders.rs  points.rs  profile.rs  services.rs  ui.rs  units.rs
src/models/: menu.rs  mod.rs  order.rs  unit.rs  user.rs
