[package]
name = "drpizza"
description = "CLI para pedir pizza da Dr. Pizza direto do terminal"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Raisson Souto"]

[features]
# Ativa dev_log! em api.rs: cargo run --features dev -- <args>
dev = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
dirs = "5"
hmac = "0.12"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
qrcode = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
serial_test = "3"
wiremock = "0.6"
